// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Textarea Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
  />
</div>
`;

exports[`renders the component as required 1`] = `
<div
  class="Textarea my-extra-class Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
    required=""
  />
</div>
`;

exports[`renders the component with a max length 1`] = `
<div
  class="Textarea my-extra-class Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    maxlength="10"
    name="userEmail"
  />
</div>
`;

exports[`renders the component with a test id 1`] = `
<div
  class="Textarea my-extra-class Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="someTestId"
    id="someInput"
    name="userEmail"
  />
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Textarea my-extra-class Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
  />
</div>
`;

exports[`renders the component with an onBlur prop 1`] = `
<div
  class="Textarea my-extra-class Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
  />
</div>
`;

exports[`renders the component with an onChange prop 1`] = `
<div
  class="Textarea my-extra-class Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
  />
</div>
`;

exports[`renders the component with disabled prop 1`] = `
<div
  class="Textarea my-extra-class Textarea--full Textarea--disabled"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    disabled=""
    id="someInput"
    name="userEmail"
  />
</div>
`;

exports[`renders the component with error prop 1`] = `
<div
  class="Textarea my-extra-class Textarea--full Textarea--negative"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
  />
</div>
`;

exports[`renders the component with rows defined 1`] = `
<div
  class="Textarea my-extra-class Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
    rows="2"
  />
</div>
`;

exports[`renders the component with small width 1`] = `
<div
  class="Textarea my-extra-class Textarea--small"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
  />
</div>
`;

exports[`renders the component with value prop 1`] = `
<div
  class="Textarea my-extra-class Textarea--full"
>
  <textarea
    aria-label="userEmail"
    class="Textarea__textarea"
    data-test-id="cf-ui-textarea"
    id="someInput"
    name="userEmail"
  >
    1234
  </textarea>
</div>
`;
